--- a/Bannerlord.ShipmasterReworked/changelog.txt
+++ b/Bannerlord.ShipmasterReworked/changelog.txt
@@ -1,1 +1,5 @@
-Add translation files.
+---------------------------------------------------------------------------------------------------
+Version: 1.3.1
+Game Versions: v1.3.x
+* Added translation files for English and Polish.
+---------------------------------------------------------------------------------------------------
